--- a/titanic/DataIntegrityTest.ipynb
+++ b/titanic/DataIntegrityTest.ipynb
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TitanicData2.csv\n"
+      "TitanicData2.csv         TitanicData2_dcTest.csv  TitanicData2_dcTrain.csv\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "38826e38-df53-4a32-b2ee-51289cf36cc3",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c450132b-9765-4332-90eb-9e4f24f8055e",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "77b4d9a3-8d4f-4b55-a204-43b3b0dfa648",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c7ad5a74-61f7-4bfd-884c-4b76ca466b5e",
    "metadata": {},
    "outputs": [
@@ -729,19 +729,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a8cc69f5-d786-474d-bb6f-96d15515d2a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e904bf7326794f4db06dfa268d850c65",
+       "model_id": "7385af85193f49159a9567705a0f60db",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_6W0V00IFKY0D9CISSG89CRW1A\">Data Integrity Sui…"
+       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_ZEA3F8VGKKUO5LI01L7OERAAB\">Data Integrity Sui…"
       ]
      },
      "metadata": {},
@@ -749,54 +749,36 @@
     }
    ],
    "source": [
-    "suite_result.show()   # jupyterlabでの表示Error"
+    "suite_result.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "dfd72fe2-31fb-42d9-b0f1-0df72bf81dce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'DataIntegrity_output.html'"
+       "'outputs/DataIntegrityTest.html'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 結果をhtml保存\n",
-    "suite_result.save_as_html('DataIntegrity_output.html')"
+    "suite_result.save_as_html('outputs/DataIntegrityTest.html')\n",
+    "\n",
+    "# to see the result access to the html file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "74e358a9-721a-48ad-9383-a80b3713a234",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataIntegrity_output (1).html\n",
-      "DataIntegrity_output (2).html\n",
-      "DataIntegrity_output.html\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls | grep html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "id": "e49a271a-010f-4215-89fe-64a1ab8ee43a",
    "metadata": {},
    "outputs": [
@@ -817,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "id": "f4f2772e-c866-453d-8491-6405a1070448",
    "metadata": {},
    "outputs": [
@@ -840,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "id": "7d00eb70-6efb-4d1c-bbf9-143c4a7bf0a3",
    "metadata": {},
    "outputs": [
@@ -850,7 +832,7 @@
        "deepchecks.core.check_result.CheckResult"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "id": "e837c95c-3a82-4d94-8b3c-648b733475d9",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1121,7 @@
        "337            338    3rd  male  NaN      0      0  7.75         0"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "3eb9a118-da88-4822-812d-af95f6288489",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1155,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "205812a8-93ed-414f-a46b-eb3e92c57a0b",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1176,7 @@
        "0.022993374920778367"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "8649b15b-8b77-4820-83d6-1b17b76159ea",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1197,7 @@
        "<Axes: xlabel='Passenger_Id', ylabel='survived'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1236,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "57e7da89-dac6-41c8-92b3-e3d28c7924fa",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1231,7 @@
        "Name: Passenger_Id, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
