--- a/titanic/TrainTestValidation.ipynb
+++ b/titanic/TrainTestValidation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "8eb1eeff-e637-4d8c-bf44-4252eb8d7795",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TitanicData2.csv\n"
+      "TitanicData2.csv         TitanicData2_dcTest.csv  TitanicData2_dcTrain.csv\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a9da8eb1-6fa8-44d1-b1f7-6b9cfa898a2f",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "16a5ac87-edce-4e89-a418-6521e61b58a8",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "e8ba03d3-4911-4ff0-af19-e6ea88fe3b64",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "(1047, 262)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "5e94ddbf-8949-4374-95e5-146ffb93310f",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "104            105    3rd  female  18.0      0      0   9.8417         1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "a86e25cc-e2d9-4815-a7df-56add41a5563",
    "metadata": {},
    "outputs": [
@@ -666,19 +666,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "50c4dc0d-e3a2-4855-b537-68b4035f5785",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad2772050d304ee9a7148a634c646f15",
+       "model_id": "922611a8ed5240909ad84613dcd15556",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_EDGB3JMQUPSWG0LLKRTNAPMI7\">Train Test Validat…"
+       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_3VU7LGLXFM95185HXAT43LPL0\">Train Test Validat…"
       ]
      },
      "metadata": {},
@@ -686,68 +686,37 @@
     }
    ],
    "source": [
-    "suite_result.show()   # jupyterlabでの表示Error"
+    "suite_result.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "179c14ce-b27f-4ff0-9f7e-abda34ed22a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'TrainTestValidation_output.html'"
+       "'outputs/TrainTestValidation.html'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 結果をhtml保存\n",
-    "suite_result.save_as_html('TrainTestValidation_output.html')"
+    "suite_result.save_as_html('outputs/TrainTestValidation.html')\n",
+    "\n",
+    "# to see the result access to the html file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3c82a0ec-7d37-4e22-a52d-b3d0feeb119a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ec2f669d-1bcf-45b9-b15f-b7840ac43e7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfor i, res in enumerate(suite_result.get_not_passed_checks()):\\n    print('>>> Not Pass Test #{}'.format(i))    \\n    print(res)\\n\""
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "for i, res in enumerate(suite_result.get_not_passed_checks()):\n",
-    "    print('>>> Not Pass Test #{}'.format(i))    \n",
-    "    print(res)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f1b0ac0-f26b-4e5c-a0d3-4b7b122e6598",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -764,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "3ff09084-2704-4ec6-9b83-ddd746f87068",
    "metadata": {},
    "outputs": [
@@ -820,7 +789,7 @@
        "1086          1087    3rd  male  NaN      8      2  69.55         0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "51d0e744-239d-41f7-a8f5-04fee5a12089",
    "metadata": {},
    "outputs": [
@@ -911,7 +880,7 @@
        "713           714    3rd  male  NaN      8      2  69.55         0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,14 +893,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2d3b4415-eec9-4557-885f-4cd8c23c0a2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1805a28-9c2f-4518-b6d9-9869a5642087",
    "metadata": {},
    "outputs": [],
    "source": []
