--- a/walmart_small/TrainTestValidation_walmart.ipynb
+++ b/walmart_small/TrainTestValidation_walmart.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fb306b99-87c2-405d-829f-3cb3de3e9cc2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a07a2d93-cb66-47f5-b384-a8db4acff445",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "032ae05e-f5a0-47fb-9108-7cead0307023",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "((702, 11), (36, 11))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "45f1fa0a-5400-4cb1-867d-1244fb5ce09b",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "4       -1.0       -1.0          0              1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "17a619ae-e77c-4743-85e8-111a3f72c560",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "max    109030.750000  57817.560000  31844.200000    1.000000       5.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "73a950a5-3498-4b7c-919f-ad9b2f4db0d5",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
        "max    1095.850000  7557.140000  17903.640000        0.0            1.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "36abbce3-47cc-428b-b115-86d3fea50b56",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
        "Name: Date, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,19 +628,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "16e41ef8-2923-4545-ac94-b57e18a7b86e",
    "metadata": {},
    "outputs": [],
    "source": [
     "target_col = 'Weekly_Sales'\n",
-    "time_col = 'Date'\n",
+    "feature_cols = ['Store','Dept','MarkDown1','MarkDown2','MarkDown3','MarkDown4','MarkDown5','IsHoliday']\n",
+    "time_col = 'Date'   # 時間変数は特徴量として扱えない\n",
     "categorical_cols = ['Store','Dept','IsHoliday']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "934830e3-2d4b-4377-9783-f0505a1e7851",
    "metadata": {},
    "outputs": [
@@ -746,7 +747,7 @@
        "      <th>10</th>\n",
        "      <td>sample_weight</td>\n",
        "      <td>integer</td>\n",
-       "      <td>Numerical Feature</td>\n",
+       "      <td>Dataset Column</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -925,6 +926,7 @@
    "source": [
     "ds_train = Dataset(df_train,\n",
     "                   label=target_col,\n",
+    "                   features=feature_cols,\n",
     "                   datetime_name = time_col,\n",
     "                   cat_features=categorical_cols)\n",
     "ds_train"
@@ -932,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "d1392936-28b3-4f26-9dca-0fc88313f925",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1040,7 @@
        "      <th>10</th>\n",
        "      <td>sample_weight</td>\n",
        "      <td>integer</td>\n",
-       "      <td>Numerical Feature</td>\n",
+       "      <td>Dataset Column</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1217,6 +1219,7 @@
    "source": [
     "ds_test = Dataset(df_test,\n",
     "                  label=target_col,\n",
+    "                  features=feature_cols,\n",
     "                  datetime_name = time_col,\n",
     "                  cat_features=categorical_cols)\n",
     "ds_test"
@@ -1232,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "2e0a069f-21f8-4915-afd1-c1950e9f20f6",
    "metadata": {},
    "outputs": [
@@ -1283,19 +1286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c39ca6d4-23b2-4882-8ff1-62437a81671e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfecca05391d421191e9aedf7ac6c9bc",
+       "model_id": "4b04694326754a149a374904afee1a6b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_6FBK3VF08NPRVT7DV6ILQG5VR\">Train Test Validat…"
+       "Accordion(children=(VBox(children=(HTML(value='\\n<h1 id=\"summary_OBM7U5ETP1ZSPWQ2FASOCLHC9\">Train Test Validat…"
       ]
      },
      "metadata": {},
